--- a/package.json
+++ b/package.json
@@ -1,73 +1,74 @@
 {
-  "name": "@teamsupercell/typings-for-css-modules-loader",
-  "version": "2.5.6",
-  "description": "Webpack loader that generates TypeScript typings for CSS modules from css-loader on the fly",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "jest",
-    "release": "release-it"
-  },
-  "author": "Tim Sebastian <tim.sebastian@gmail.com>",
-  "license": "MIT",
-  "keywords": [
-    "Typescript",
-    "TypeScript",
-    "CSS Modules",
-    "CSSModules",
-    "CSS Modules typings",
-    "Webpack",
-    "Webpack loader",
-    "Webpack css module typings loader",
-    "typescript webpack typings",
-    "css modules webpack typings"
-  ],
-  "dependencies": {
-    "camelcase": "^5.3.1",
-    "loader-utils": "^1.4.2",
-    "schema-utils": "^2.0.1"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.2.6",
-    "auto-changelog": "^2.2.1",
-    "css-loader": "*",
-    "css-loader3": "npm:css-loader@^3.1.0",
-    "eslint": "8.32.0",
-    "eslint-config-prettier": "^8.6.0",
-    "jest": "^29.3.1",
-    "memfs": "^3.4.13",
-    "prettier": "*",
-    "release-it": "^15.6.0",
-    "typescript": "^4.9.4",
-    "webpack": "^5.75.0"
-  },
-  "optionalDependencies": {
-    "prettier": "*"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TeamSupercell/typings-for-css-modules-loader.git"
-  },
-  "bugs": {
-    "url": "https://github.com/TeamSupercell/typings-for-css-modules-loader/issues"
-  },
-  "homepage": "https://github.com/TeamSupercell/typings-for-css-modules-loader#readme",
-  "eslintConfig": {
-    "parserOptions": {
-      "ecmaVersion": 2017
+    "name": "@teamsupercell/typings-for-css-modules-loader",
+    "version": "2.5.6",
+    "description": "Webpack loader that generates TypeScript typings for CSS modules from css-loader on the fly",
+    "main": "src/index.js",
+    "scripts": {
+        "release": "release-it",
+        "test": "jest"
     },
-    "extends": [
-      "prettier"
-    ]
-  },
-  "release-it": {
-    "github": {
-      "release": true
+    "author": "Tim Sebastian <tim.sebastian@gmail.com>",
+    "license": "MIT",
+    "keywords": [
+        "Typescript",
+        "TypeScript",
+        "CSS Modules",
+        "CSSModules",
+        "CSS Modules typings",
+        "Webpack",
+        "Webpack loader",
+        "Webpack css module typings loader",
+        "typescript webpack typings",
+        "css modules webpack typings"
+    ],
+    "dependencies": {
+        "camelcase": "^5.3.1",
+        "loader-utils": "^1.4.2",
+        "schema-utils": "^2.0.1"
     },
-    "git": {
-      "changelog": "npx auto-changelog --stdout --commit-limit false --unreleased --template https://raw.githubusercontent.com/release-it/release-it/master/templates/changelog-compact.hbs"
+    "devDependencies": {
+        "@types/jest": "^29.5.1",
+        "auto-changelog": "^2.2.1",
+        "css-loader": "^3.6.0",
+        "css-loader3": "npm:css-loader@^3.1.0",
+        "eslint": "8.32.0",
+        "eslint-config-prettier": "^8.8.0",
+        "jest": "^29.3.1",
+        "memfs": "^3.5.1",
+        "prettier": "*",
+        "release-it": "^15.10.1",
+        "typescript": "^5.0.4",
+        "vite-plugin-clean": "^1.0.0",
+        "webpack": "^5.81.0"
     },
-    "hooks": {
-      "after:bump": "npx auto-changelog --commit-limit false https://raw.githubusercontent.com/release-it/release-it/master/templates/keepachangelog.hbs"
+    "optionalDependencies": {
+        "prettier": "^2.8.8"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/TeamSupercell/typings-for-css-modules-loader.git"
+    },
+    "bugs": {
+        "url": "https://github.com/TeamSupercell/typings-for-css-modules-loader/issues"
+    },
+    "homepage": "https://github.com/TeamSupercell/typings-for-css-modules-loader#readme",
+    "eslintConfig": {
+        "parserOptions": {
+            "ecmaVersion": 2017
+        },
+        "extends": [
+            "prettier"
+        ]
+    },
+    "release-it": {
+        "github": {
+            "release": true
+        },
+        "git": {
+            "changelog": "npx auto-changelog --stdout --commit-limit false --unreleased --template https://raw.githubusercontent.com/release-it/release-it/master/templates/changelog-compact.hbs"
+        },
+        "hooks": {
+            "after:bump": "npx auto-changelog --commit-limit false https://raw.githubusercontent.com/release-it/release-it/master/templates/keepachangelog.hbs"
+        }
     }
-  }
 }
